cmake_minimum_required(VERSION 3.20)
project(SP2021 C)

set(CMAKE_C_STANDARD 11)

add_executable(1-1 1/1.c)
add_executable(1-2 1/2.c)
add_executable(1-3 1/3.c)
add_executable(1-4 1/4.c)
add_executable(1-5 1/5.c)

add_executable(2-1 2/1.c)
add_executable(2-2 2/2.c)
add_executable(2-3 2/3.c)
add_executable(2-4 2/4.c)
add_executable(2-5 2/5.c)
add_executable(2-6 2/6.c)
add_executable(2-7 2/7.c)
add_executable(2-8 2/8.c)
add_executable(2-9 2/9.c)

add_executable(3-1 3/1.c)
add_executable(3-2 3/2.c)
add_executable(3-3 3/3.c)
add_executable(3-4 3/4.c)
add_executable(3-5 3/5.c)
add_executable(3-6 3/6.c)
add_executable(3-7 3/7.c)
add_executable(3-8 3/8.c)
add_executable(3-9 3/9.c)
add_executable(3-10 3/10.c)

add_executable(4-1 4/1.c)
add_executable(4-2 4/2.c)
add_executable(4-3 4/3.c)
add_executable(4-4 4/4.c)
add_executable(4-5 4/5.c)
add_executable(4-6 4/6.c)
add_executable(4-7 4/7.c)
add_executable(4-8 4/8.c)

add_executable(5-1 5/1.c)
add_executable(5-2 5/2.c)
add_executable(5-3 5/3.c)

add_executable(6-1 6/1.c)
add_executable(6-2 6/2.c)
add_executable(6-3 6/3.c)
add_executable(6-4 6/4.c)
add_executable(6-5 6/5.c)
add_executable(6-6 6/6.c)
add_executable(6-7 6/7.c)

add_executable(7-1 7/1.c)
add_executable(7-2 7/2.c)
add_executable(7-3 7/3.c)
add_executable(7-4 7/4.c)
add_executable(7-5 7/5.c)
add_executable(7-6 7/6.c)
add_executable(7-7 7/7.c)
add_executable(7-8 7/8.c)
add_executable(7-9 7/9.c)

add_executable(8-1 8/1.c)
add_executable(8-2 8/2.c)
add_executable(8-3 8/3.c)
add_executable(8-4 8/4.c)
add_executable(8-5 8/5.c)

add_executable(9-1 9/1.c)
add_executable(9-2 9/2.c)
add_executable(9-3 9/3.c)

add_executable(K1-1 K1/1.c)
add_executable(K1-2 K1/2.c)
add_executable(K1-3 K1/3.c)
add_executable(K1-4 K1/4.c)
add_executable(K1-5 K1/5.c)
add_executable(K1-6 K1/6.c)
add_executable(K1-7 K1/7.c)
add_executable(K1-8 K1/8.c)
add_executable(K1-9 K1/9.c)
add_executable(K1-10 K1/10.c)
add_executable(K1-11 K1/11.c)

add_executable(K2-1 K2/1.c)
add_executable(K2-2 K2/2.c)
add_executable(K2-3 K2/3.c)
add_executable(K2-4 K2/4.c)
add_executable(K2-5 K2/5.c)
add_executable(K2-6 K2/6.c)
add_executable(K2-7 K2/7.c)
add_executable(K2-8 K2/8.c)
add_executable(K2-9 K2/9.c)
add_executable(K2-10 K2/10.c)
add_executable(K2-11 K2/11.c)
add_executable(K2-12 K2/12.c)
add_executable(K2-13 K2/13.c)
add_executable(K2-14 K2/14.c)
add_executable(K2-15 K2/15.c)
add_executable(K2-16 K2/16.c)
add_executable(K2-17 K2/17.c)
add_executable(K2-18 K2/18.c)
add_executable(K2-19 K2/19.c)
add_executable(K2-20 K2/20.c)
add_executable(K2-21 K2/21.c)